--- a/React/myapp/src/App.css
+++ b/React/myapp/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
+/* @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap'); */
+/* 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+  font-size: 36;
+} */
+*{
+  
+}
+.type-button {
+  background-color: #F6F8FB;
+  color: #458FF6;
+  border-radius: 55px;
+  border: 1px solid #458FF6;
+  Width :120px;
+Height :50px;
+Top :145px;
+Left :111px;
+font-size: 24;
+font-family: 'Barlow';
+  /* margin-left: 520px; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.food-item, .modal-food-item{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 20px;
+}
+.food-img, .modal-food-img {
+  margin: auto;
+  margin-top: 5px
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.food-text, .modal-food-text {
+  font-size: 15px;
+  height: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: block;
+  margin-bottom: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.modal-food-text {
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 15px;
+  height: fit-content
+}
+
+
+.food-title, .modal-food-title {
+  color: #7C7C7C;
+  height: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: block;
+  font-size: 12px;
+}
+
+.modal-food-title {
+  font-weight: bold;
+  font-size: 15px;
+}
+.box{
+  border-color:#7C7C7C;
+}
+.card{
+  width: 300px;
+  height: 102px;
+  background-color: #ffffff;
+  border-color: #000d1f;
+  /* border-block: ; */
+  border-radius: 15;
+  
+}
+.card-body{
+  border-radius: 15;
+  border-color: #000d1f;
+  position: absolute;
+left: 40%;
+right: 3.33%;
+top: 6.25%;
+bottom: 31.25%;
+}
+h1{
+  background-color: #000d1f;
+}
+
+.MenuCard{
+  background-color: #E5E5E5;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: fixed;
+  transition: 350ms;
+  z-index: 0;
+  left: 0;
+  right:0;
+  top:80;
+  padding-left: 10%;
+  padding-right:30%;
+  align-items: baseline;
 }
 
-.App-link {
-  color: #61dafb;
+.cart{
+  width: 250px;
+  justify-content: center;
+  position: fixed;
+  transition: 350ms;
+  z-index: 11;
+  right: 0%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.align-right{
+  text-align: right;
+  right:0;
+        border: 0;position: fixed;
+}
+
+h1{
+  color: #F6F8FB;
 }
