--- a/React/myapp/src/App.css
+++ b/React/myapp/src/App.css
@@ -43,30 +43,40 @@ font-family: 'Barlow';
   background-color: #E5E5E5;
   position: relative;
 }
+
+.cartItemContent{
+  margin:auto 0px;
+}
 .incartItem{
   position: absolute;
   top:20%;
-  left: 20%;
+  left:30%;
   right:0px;
   display: inline-block;
 }
 .qty{
   display: inline-block;
   position: absolute;
-  right: 0%;
+  right: 10px;
 }
 .note{
   width: 80%;
   border-radius: 5px;
+  box-sizing: border-box;
   height: 30px;
 }
 .del{
   position: absolute;
-  right: 0px;
+  right: 10px;
   width: 30px;
   height: 30px;
 }
 
+.menuFoodImg{
+  width: 60px;
+  height: 60px;
+  background-color: red;
+}
 .food-item, .modal-food-item{
   margin-top: 15px;
   margin-bottom: 15px;
@@ -113,13 +123,15 @@ font-family: 'Barlow';
   border-color:#7C7C7C;
 }
 .card{
-  width: 250px;
-  height: 102px;
+  /* width: 250px; */
+  /* height: 102px; */
   background-color: #ffffff;
   border-color: #000d1f;
   /* border-block: ; */
   border-radius: 15px;
-  padding-top: 5%;
+  /* padding-top: 5%; */
+  padding: 10px;
+  box-sizing: border-box;
   
 }
 .card-body{
@@ -186,13 +198,13 @@ color: #2685F8;
 .cart{
   width: 300px;
   /* height:100%; */
-  height: 100%;
+  /* height: 100%; */
   right:0%;
   position: absolute;
   transition: 350ms;
   z-index: 11;
   right: 0%;
-  padding: 10px;
+  /* padding: 10px; */
   box-sizing: border-box;
   background-color:#ffffff;
   border-radius: 15px;
@@ -222,6 +234,24 @@ text-align: right;
 .foodCard{
   padding-left: 5%;
   top:0%;
+  border: 2px solid black;
+  width: 400px
+}
+.foodCard .row{
+  height: 60px;
+}
+
+.foodCard .row .col{
+  height: 60px;
+  background-color: pink;
+  display: inline-block;
+  align-self: center;
+  /* margin: 0px 10px ; */
+}
+
+.foodCard .row .btn{
+  /* background-color: pink; */
+  display: inline-block;
 }
 
 .infobtn{
