--- a/React/myapp/src/App.css
+++ b/React/myapp/src/App.css
@@ -389,3 +389,173 @@ z-index: 3;
   font-weight: bold;
   right: 0px
 }
+.itemContainer {
+  display: flex;
+flex-direction: column;
+background-color: white;
+max-width: 450px;
+min-height: 300px;
+margin: auto;
+margin-top: 10%;
+
+  border: 1px black solid;
+  border-radius: 10px;
+
+}
+.itemHeader {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 10%;
+  /* border: 1px black solid; */
+  padding: 5px;   
+  border-radius: 10px 10px 0 0;
+  background-color: lightgray;
+  margin-bottom: 10px;
+}
+.headerName{
+  margin-left: 5px;
+  font-size: 17px;
+}
+.closeBtn{
+  background: transparent;
+  border: none;
+  font-size: 20px;
+  font-weight: 700;
+  color: tomato;
+  margin-left: auto;
+  margin-right: 5px;
+}
+.closeBtn:hover{
+  color: red;
+}
+
+
+.itemBody {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px;
+}
+.itemPic {
+  width: 150px;
+  max-height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  
+}
+.itemDetail {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+ 
+}
+.itemPrice {
+  display: flex;
+  justify-content:space-between;
+}
+
+.redColor{
+  color: red;
+}
+.itemQuantity {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px 0;
+  margin: 5px 0;  
+  border: 1px solid rgb(247, 243, 247);
+  border-left: none;
+  border-right: none;
+}
+.itemQuantityText{
+  color: black;
+  font-size: 15px;
+  font-weight: 700;
+  
+}
+
+.itemQuantityBtn{
+  display: flex;
+  flex-direction: row;
+
+
+}
+.addMinusBtn{
+ 
+  border: red 1.5px solid;
+  border-radius: 5px;
+  width: 25px;
+  height: 25px;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 700;
+  color: tomato;
+  
+}
+.addMinusBtn:hover{
+  color: green;
+  
+
+}
+
+
+.addMinusText{
+  width: 30px;
+  text-align: center;
+  border: none;
+}
+.itemNutri {
+  display: flex;
+  flex-direction: column;
+}
+.itemNutri h5{
+  margin-bottom: 5px;
+}
+
+.itemNutri h4{
+  margin-top: 3px;
+  margin-bottom: 5px;
+}
+
+.itemNutriText{
+  color: thistle;
+  font-size: 12px;
+}
+
+
+
+.textSize{
+  color: thistle;
+  font-size:12px;
+}
+
+.fontW{
+  font-size: 9px;
+  color: thistle;
+  font-style: italic;
+}
+.checkBox{
+  background-color: red;
+
+}
+.checkboxItem{
+  display: flex;
+  margin-top: 10px;
+}
+
+.itemNutriCheckText{
+  color: black;
+  font-size: 15px;
+  font-weight: 700;
+  margin-left: 5px;
+}
+
+.bottomBtn{
+  color: white;
+  background-color: red;
+  border: none;
+  border-radius: 5px;
+  padding: 7px;
+  margin-top: 15px;
+}
