--- a/React/myapp/src/App.css
+++ b/React/myapp/src/App.css
@@ -1,110 +1,220 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?
+family=Lato&display=swap'); */
 /* 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Lato', sans-serif;
-  font-size: 36;
+ box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+ font-family: 'Lato', sans-serif;
+ font-size: 36;
 } */
-*{
-  font-family:'Times New Roman', Times, serif;
-}
-.type-button {
+.material-icons-outlined {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px; /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  font-feature-settings: "liga";
+ }
+ .type-button {
   background-color: #F6F8FB;
   color: #458FF6;
   border-radius: 55px;
   border: 1px solid #458FF6;
   Width :120px;
   margin: 10px;
-Height :50px;
-Top :145px;
-Left :111px;
-font-size: 24;
-font-family: 'Barlow';
--webkit-transition: -webkit-transform 1s,opacity 1s,background 1s,width 1s,height 1s,font-size 1s;
-}
-.type-button:hover{
+ Height :50px;
+ Top :145px;
+ Left :111px;
+ font-size: 24;
+ font-family: 'Barlow';
+ -webkit-transition: -webkit-transform 1s,opacity 1s,background
+ 1s,width 1s,height 1s,font-size 1s;
+ }
+ .type-button:hover{
   background-color:#62AFFC;
   color:white;
-}
-.padding10
-{
+ }
+ .padding10
+ {
   padding: 10px;
   box-sizing: border-box;
-
-  height:fit-content;
-  
-}
-.img{
+  }
+ * {
+  font-family: "Roboto", monospace;
+ }
+ .type-button {
+  background-color: #f6f8fb;
+  color: #458ff6;
+  border-radius: 55px;
+  border: 1px solid #458ff6;
+  width: 120px;
+  margin: 10px;
+  height: 50px;
+  top: 145px;
+  left: 111px;
+  font-size: 24;
+  font-family: "Barlow";
+  /* margin-left: 520px; */
+ }
+ .padding10 {
+  padding: 5px 10px;
+  box-sizing: border-box;
+  height: fit-content;
+ }
+ .img {
   width: 50px;
   height: 50px;
   background-color: red;
   display: inline-block;
-}
-.padding10 .card{
+ }
+ .padding10 .card {
   border-radius: 15px;
-  background-color: #E5E5E5;
+  background-color: #f0f0f0;
   position: relative;
-}
-
-.cartItemContent{
-  margin:auto 0px;
-}
-.incartItem{
-  position: absolute;
-  top:20%;
-  left:30%;
-  right:0px;
+ }
+ .foodCartInfo span {
+  font-weight: bold;
+ }
+ .cartItemContent {
+  position: relative;
+  margin: auto 0px;
+ }
+ .foodCartInfo {
+  /* position: absolute; */
+  margin-left: 10px;
+  width: 36%;
+  height: 40px;
   display: inline-block;
-}
-.qty{
+ }
+ .totalFoodPrice {
+  position: absolute;
+  right: 0%;
+  text-align: right;
+  height: 40px;
+  width: 20%;
+  display: inline-block;
+  line-height: 40px;
+  font-weight: bold;
+  vertical-align: top;
+ }
+ .cartItemContent .row {
+  position: relative;
+  height: 40px;
+  top: 20%;
+  left: 0%;
+  width: 100%;
+  height: 40px;
+  right: 0px;
+  margin: 5px 0px;
+  display: inline-block;
+ }
+ .cartItemContent .row .btn {
+  border-radius: 5px;
+  border: none;
+ }
+ .addCartItem,
+ .subCartItem {
+  background-color: #2685f8;
+ }
+ .qty {
   display: inline-block;
   position: absolute;
-  right: 10px;
-}
-.note{
-  width: 80%;
+  right: 20%;
+  /* width: 120px; */
+  /* height: 100%; */
+  height: 40px;
+  display: inline-block;
+  vertical-align: top;
+ }
+ .qty > * {
+  vertical-align: middle;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  text-align: center;
+  border: none;
+  margin: 0px;
+  padding: 0px;
+ }
+ .qty span {
+  line-height: 40px;
+  /* color: white; */
+ }
+ .qty .btn span {
+  color: white;
+ }
+ .note {
+  width: 85%;
+  right: 10%;
+  border: none;
+  font-size: 16px;
+  padding: 0px 10px;
+  background-color: #d0d0d0;
   border-radius: 5px;
   box-sizing: border-box;
-  height: 30px;
-}
-.del{
+  height: 40px;
+ }
+ .del {
   position: absolute;
-  right: 10px;
-  width: 30px;
-  height: 30px;
-}
-
-.menuFoodImg{
+  right: 0%;
+  width: 40px;
+  height: 40px;
+  box-sizing: border-box;
+  background-color: #eb5757;
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+ }
+ .del span {
+  line-height: 40px;
+  color: white;
+ }
+ .menuFoodImg {
   width: 80px;
   height: 80px;
-  float:left;
-}
-
-.menuFoodImg2{
-  width: 90px;
-  height: 90px;
-  float:left;
-}
-.foodCard .foodRow{
-  height:80px;
-}
-.foodCard .foodRow2{
-  margin-top:5px;
-  height:20px;
-}
-.food-item, .modal-food-item{
+  float: left;
+ }
+ .menuFoodImg2 {
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
+  float: left;
+ }
+ .foodCard .foodRow {
+  height: 80px;
+ }
+ .foodCard .foodRow2 {
+  margin-top: 5px;
+  height: 20px;
+ }
+ .food-item,
+ .modal-food-item {
   margin-top: 15px;
   margin-bottom: 15px;
   border-radius: 20px;
-}
-.food-img, .modal-food-img {
+ }
+ .food-img,
+ .modal-food-img {
   margin: auto;
-  margin-top: 5px
-}
-
-.food-text, .modal-food-text {
+  margin-top: 5px;
+ }
+ .food-text,
+ .modal-food-text {
   font-size: 15px;
   height: 20px;
   overflow: hidden;
@@ -112,34 +222,31 @@ font-family: 'Barlow';
   white-space: nowrap;
   display: block;
   margin-bottom: 8px;
-}
-
-.modal-food-text {
+ }
+ .modal-food-text {
   font-weight: bold;
   font-size: 20px;
   margin-bottom: 15px;
   height: fit-content;
-}
-
-
-.food-title, .modal-food-title {
-  color: #7C7C7C;
+ }
+ .food-title,
+ .modal-food-title {
+  color: #7c7c7c;
   height: 20px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   display: block;
   font-size: 12px;
-}
-
-.modal-food-title {
+ }
+ .modal-food-title {
   font-weight: bold;
   font-size: 15px;
-}
-.box{
-  border-color:#7C7C7C;
-}
-.card{
+ }
+ .box {
+  border-color: #7c7c7c;
+ }
+ .card {
   /* width: 250px; */
   /* height: 102px; */
   background-color: #ffffff;
@@ -149,147 +256,139 @@ font-family: 'Barlow';
   /* padding-top: 5%; */
   padding: 10px;
   box-sizing: border-box;
-  
-}
-.card-body{
+ }
+ .card-body {
   left: 20%;
-  right:0%;
-  top:10%;
+  right: 0%;
+  top: 10%;
   border-radius: 15px;
   border-color: #000d1f;
-}
-h1{
+ }
+ h1 {
   background-color: #000d1f;
-}
-h5{
+ }
+ h5 {
   height: fit-content;
   font-family: Barlow;
-font-style: normal;
-font-weight: bold;
-font-size: 18px;
-color: #3B5162;
-
-}
-
-
-h6{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  color: #3b5162;
+ }
+ h6 {
   font-family: Roboto;
   height: fit-content;
-font-style: normal;
-font-weight: bold;
-font-size: 18px;
-
-color: #2685F8;
-}
-.cart-text{
-  left:5%;
-  bottom:0%;
-}
-.containCard{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  color: #2685f8;
+ }
+ .cart-text {
+  left: 5%;
+  bottom: 0%;
+ }
+ .containCard {
   width: 300px;
-  height:fit-content;
-  padding:1%;
-  margin:0;
-  float:left;
+  height: fit-content;
+  padding: 1%;
+  margin: 0;
+  float: left;
   /* background-color: #3B5162; */
-}
-.menuFoodName{
-  font-size:20px;
-  font-weight:bold;
-}
-.MenuCard{
-  background-color: #E5E5E5;
+ }
+ .menuFoodName {
+  font-size: 20px;
+  font-weight: bold;
+ }
+ .MenuCard {
+  background-color: #e5e5e5;
   justify-content: center;
   position: absolute;
-  height:100%;
-  width:80%;
+  height: 100%;
+  width: 80%;
   z-index: 0;
   left: 0%;
-  padding:0;
+  padding: 0;
   align-items: baseline;
-}
-.MenuCard.active{
-  width:67%;
+ }
+ .MenuCard.active {
+  width: 67%;
   left: 14.5%;
-}
-
-.cart{
+ }
+ .cart {
   width: 20%;
-  right:0%;
+  right: 0%;
   position: absolute;
   transition: 350ms;
   z-index: 11;
   box-sizing: border-box;
-  background-color:#ffffff;
+  background-color: #ffffff;
   border-radius: 15px;
-  height:100%;
-}
-
-.align-right{
+  height: 100%;
+ }
+ .foodCartInfo > * {
+  display: block;
+ }
+ .align-right {
   text-align: right;
-  right:0;
-        border: 0;position: fixed;
-}
-
-h1{
-  color: #F6F8FB;
-}
-.cart-body{
-  
-  width:80%;
-  height:100%;
-}
- .cart-title{
+  right: 0;
+  border: 0;
+  position: fixed;
+ }
+ h1 {
+  color: #f6f8fb;
+ }
+ .cart-body {
+  width: 80%;
+  height: 100%;
+ }
+ .cart-title {
   padding-left: 5%;
-} 
-h5.cart-title {
-text-align: right;
-}
-.foodCard{
+ }
+ h5.cart-title {
+  text-align: right;
+ }
+ .foodCard {
   padding-left: 5%;
-  top:0%;
+  top: 0%;
   border: 2px solid black;
   width: 100%;
-}
-.foodCard .row .btn{
+ }
+ .foodCard .row .btn {
   /* background-color: pink; */
   display: inline-block;
-}
-
-.infobtn{
-  
-position: relative;
-align-self:flex-start;
-left:0%;
-bottom:0%;
-background: #EB5757;
-border-radius: 10px;
-z-index: 3;
-}
-.addbtn{
-    margin: auto;
-  position:relative;
-  right: 0%;
-  background: #2685F8;
+ }
+ .infobtn {
+  position: relative;
+  align-self: flex-start;
+  left: 0%;
+  bottom: 0%;
+  background: #eb5757;
   border-radius: 10px;
-}
-.card-subtitle{
-  height:fit-content;
-
-}
-
-
-.drug-item, .modal-drug-item{
+  z-index: 3;
+ }
+ .addbtn {
+  margin: auto;
+  position: relative;
+  right: 0%;
+  background: #2685f8;
+  border-radius: 10px;
+ }
+ .card-subtitle {
+  height: fit-content;
+ }
+ .drug-item,
+ .modal-drug-item {
   margin-top: 15px;
   margin-bottom: 15px;
   border-radius: 20px;
-}
-.drug-img, .modal-drug-img {
+ }
+ .drug-img,
+ .modal-drug-img {
   margin: auto;
-  margin-top: 5px
-}
-
-.drug-text, .modal-drug-text {
+  margin-top: 5px;
+ }
+ .drug-text,
+ .modal-drug-text {
   font-size: 15px;
   height: 20px;
   overflow: hidden;
@@ -297,34 +396,30 @@ z-index: 3;
   white-space: nowrap;
   display: block;
   margin-bottom: 8px;
-}
-
-.modal-drug-text {
+ }
+ .modal-drug-text {
   font-weight: bold;
   font-size: 20px;
   margin-bottom: 15px;
-  height: fit-content
-}
-
-
-.drug-title, .modal-drug-title {
-  color: #7C7C7C;
+  height: fit-content;
+ }
+ .drug-title,
+ .modal-drug-title {
+  color: #7c7c7c;
   height: 20px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   display: block;
   font-size: 12px;
-}
-
-.modal-drug-title {
+ }
+ .modal-drug-title {
   font-weight: bold;
   font-size: 15px;
-}
-
-.modal-add-button {
+ }
+ .modal-add-button {
   margin: auto;
-  background-color: #62AFFC;
+  background-color: #62affc;
   color: white;
   font-weight: bold;
   border: 1px white;
@@ -333,8 +428,8 @@ z-index: 3;
   font-size: 20px;
   margin-top: 10px;
   width: 466px;
-}
-.modal-cancel-button {
+ }
+ .modal-cancel-button {
   margin: auto;
   background-color: #fc7462;
   color: white;
@@ -345,91 +440,46 @@ z-index: 3;
   font-size: 20px;
   margin-top: 10px;
   width: 466px;
-}
-.modal-add-button:hover {
-  background-color: #62AFFC;
-}
-
-.drug-price-add, .modal-drug-price-add {
+ }
+ .modal-add-button:hover {
+  background-color: #62affc;
+ }
+ .drug-price-add,
+ .modal-drug-price-add {
   margin-top: 10px;
-}
-
-.drug-price {
+ }
+ .drug-price {
   font-size: 15px;
   width: 10px;
   font-weight: bold;
-}
-
-.modal-item-content {
+ }
+ .modal-item-content {
   margin-top: 10px;
   position: relative;
-}
-
-.modal-adjust-item, .modal-add-item, .modal-number-item{
+ }
+ .modal-adjust-item,
+ .modal-add-item,
+ .modal-number-item {
   float: left;
   width: 17px;
   text-align: center;
   font-size: 20px;
   margin-right: 15px;
-  padding-top: 5px
-}
-
-.modal-number-item {
+  padding-top: 5px;
+ }
+ .modal-number-item {
   width: 45.67px;
   height: 45.67px;
   border: 1px solid;
   border-radius: 17px;
-}
-
-
-.modal-drug-price {
+ }
+ .modal-drug-price {
   margin-top: 0px;
   position: absolute;
   font-size: 25px;
   font-weight: bold;
-  right: 0px
-}
-.itemContainer {
-  display: flex;
-flex-direction: column;
-background-color: white;
-max-width: 450px;
-min-height: 300px;
-margin: auto;
-margin-top: 10%;
-
-  border: 1px black solid;
-  border-radius: 10px;
-
-}
-.itemHeader {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 10%;
-  /* border: 1px black solid; */
-  padding: 5px;   
-  border-radius: 10px 10px 0 0;
-  background-color: lightgray;
-  margin-bottom: 10px;
-}
-.headerName{
-  margin-left: 5px;
-  font-size: 17px;
-}
-.closeBtn{
-  background: transparent;
-  border: none;
-  font-size: 20px;
-  font-weight: 700;
-  color: tomato;
-  margin-left: auto;
-  margin-right: 5px;
-}
-.closeBtn:hover{
-  color: red;
-}
-
+  right: 0px;
+ }
 
 .itemBody {
   display: flex;
