--- a/React/myapp/src/App.css
+++ b/React/myapp/src/App.css
@@ -480,6 +480,47 @@ family=Lato&display=swap'); */
   font-weight: bold;
   right: 0px;
  }
+ .itemContainer {
+  display: flex;
+flex-direction: column;
+background-color: white;
+max-width: 450px;
+min-height: 300px;
+margin: auto;
+margin-top: 10%;
+
+  border: 1px black solid;
+  border-radius: 10px;
+
+}
+.itemHeader {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 10%;
+  /* border: 1px black solid; */
+  padding: 5px;   
+  border-radius: 10px 10px 0 0;
+  background-color: lightgray;
+  margin-bottom: 10px;
+}
+.headerName{
+  margin-left: 5px;
+  font-size: 17px;
+}
+.closeBtn{
+  background: transparent;
+  border: none;
+  font-size: 20px;
+  font-weight: 700;
+  color: tomato;
+  margin-left: auto;
+  margin-right: 5px;
+}
+.closeBtn:hover{
+  color: red;
+}
+
 
 .itemBody {
   display: flex;
