--- a/React/myapp/src/App.css
+++ b/React/myapp/src/App.css
@@ -484,8 +484,7 @@ family=Lato&display=swap'); */
   display: flex;
 flex-direction: column;
 background-color: white;
-max-width: 450px;
-min-height: 300px;
+width:500px;
 margin: auto;
 margin-top: 10%;
 
@@ -496,7 +495,7 @@ margin-top: 10%;
 .itemHeader {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 98%;
   height: 10%;
   /* border: 1px black solid; */
   padding: 5px;   
@@ -523,10 +522,14 @@ margin-top: 10%;
 
 
 .itemBody {
-  display: flex;
-  flex-direction: row;
+  float:left;
   justify-content: space-between;
   padding: 10px;
+}
+.Picbox{
+  width:50%;
+  margin:0;
+  float: left;
 }
 .itemPic {
   width: 150px;
@@ -535,11 +538,14 @@ margin-top: 10%;
   border-radius: 8px;
   
 }
+.clear{
+  clear:both;
+}
 .itemDetail {
   display: flex;
   flex-direction: column;
   margin-left: 10px;
- 
+ width: 40%;
 }
 .itemPrice {
   display: flex;
