--- a/React/myapp/src/App.css
+++ b/React/myapp/src/App.css
@@ -656,3 +656,13 @@ margin-top: 10%;
   padding: 7px;
   margin-top: 15px;
 }
+.scroll-bg-cart{
+  width:100%;
+  margin: 5% auto;
+}
+.scroll-div-cart{
+  width: 100%;
+  height:340px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
