--- a/React/myapp/src/App.css
+++ b/React/myapp/src/App.css
@@ -184,10 +184,125 @@ family=Lato&display=swap'); */
   line-height: 40px;
   color: white;
  }
- .menuFoodImg {
+ .menuFoodImgBanhNgot {
   width: 80px;
-  height: 80px;
+  height: 100px;
   float: left;
+  background-image: url(./image/BanhNgot.jpg);
+ }
+ .menuFoodImgCaHoiTeriyaki {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/CaHoiTeriyaki.jpg);
+ }
+ .menuFoodImgHamburger {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/Hamburger.jpg);
+ }
+ .menuFoodImgBanhDonut {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/Donut.jpg);
+ }
+ .menuFoodImgGaNuong {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/GaNuong.jpg);
+ }
+ .menuFoodImgGaRan {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/GaRan.jpg);
+ }
+ .menuFoodImgKhoaiTayChien {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/KhoaiTayChien.jpg);
+ }
+ .menuFoodImgMacaron {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/macaron.jpg);
+ }
+ .menuFoodImgMyY {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/myY.jpg);
+ }
+ .menuFoodImgNemCongChaPhuong {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/nemCongChaPhuong.jpg);
+ }
+ .menuFoodImgPanCake {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/pancake.jpg);
+ }
+ .menuFoodImgPizza {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/pizza.jpg);
+ }
+ .menuFoodImgCocaCola {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/Coca.jpg);
+ }
+ .menuFoodImgCappuccino {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/cappuccino.jpg);
+ }
+ .menuFoodImgCocktailRose {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/coctailRose.jpg);
+ }
+ .menuFoodImgNuocCam {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/nuocCam.jpg);
+ }
+ .menuFoodImgSinhTo {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/Sinhto.jpg);
+ }
+ .menuFoodImgSprite {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/sprite.jpg);
+ }
+ .menuFoodImgTraiCayDam {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/traiCayDam.jpg);
+ }
+ .menuFoodImgComboGiangSinh {
+  width: 80px;
+  height: 100px;
+  float: left;
+  background-image: url(./image/comboGiangSinh.jpg);
  }
  .menuFoodImg2 {
   border-radius: 10px;
@@ -199,8 +314,10 @@ family=Lato&display=swap'); */
   height: 80px;
  }
  .foodCard .foodRow2 {
-  margin-top: 5px;
-  height: 20px;
+  margin-top: 30px;
+  margin-left: 0px;
+  height: 30px;
+  display: flex;
  }
  .food-item,
  .modal-food-item {
@@ -288,22 +405,27 @@ family=Lato&display=swap'); */
   bottom: 0%;
  }
  .containCard {
-  width: 300px;
+  width: 350px;
   height: fit-content;
   padding: 1%;
-  margin: 0;
+  margin-left: 15px;
   float: left;
   /* background-color: #3B5162; */
  }
  .menuFoodName {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
+  margin-left: 90px;
+ }
+ .menuFoodPrice {
+  font-size: 16px;
+  margin-left: 90px;
  }
  .MenuCard {
   background-color: #e5e5e5;
   justify-content: center;
   position: absolute;
-  height: 100%;
+  height: 640px;
   width: 80%;
   z-index: 0;
   left: 0%;
@@ -323,7 +445,7 @@ family=Lato&display=swap'); */
   box-sizing: border-box;
   background-color: #ffffff;
   border-radius: 15px;
-  height: 100%;
+  height: 640px;
  }
  .foodCartInfo > * {
   display: block;
@@ -351,11 +473,8 @@ family=Lato&display=swap'); */
   padding-left: 5%;
   top: 0%;
   border: 2px solid black;
-  width: 100%;
- }
- .foodCard .row .btn {
-  /* background-color: pink; */
-  display: inline-block;
+  width: 380px;
+  height: 160px;
  }
  .infobtn {
   position: relative;
@@ -365,9 +484,11 @@ family=Lato&display=swap'); */
   background: #eb5757;
   border-radius: 10px;
   z-index: 3;
+  height: 30px;
+  width: 150px;
  }
  .addbtn {
-  margin: auto;
+  margin-left: 10px;
   position: relative;
   right: 0%;
   background: #2685f8;
@@ -485,8 +606,8 @@ family=Lato&display=swap'); */
 flex-direction: column;
 background-color: white;
 width:500px;
-margin: auto;
-margin-top: 10%;
+margin-top: 30px;
+margin-left: 600px;
 
   border: 1px black solid;
   border-radius: 10px;
@@ -527,17 +648,152 @@ margin-top: 10%;
   padding: 10px;
 }
 .Picbox{
-  width:50%;
-  margin:0;
+  width: 120px;
+  height: 150px;
+  margin-right: 50px;
   float: left;
 }
-.itemPic {
-  width: 150px;
-  max-height: 150px;
+.itemPicBanhNgot {
+  width: 120px;
+  height: 150px;
   border: lightgray 1px solid;
   border-radius: 8px;
-  
+  background-image: url('./image/BanhNgot1.png') ;
 }
+.itemPicCaHoiTeriyaki {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/CaHoiTerayaki1.png') ;
+}
+.itemPicHamburger {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/Hamburger1.png') ;
+}
+.itemPicBanhDonut {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/Donut1.png') ;
+}
+.itemPicGaNuong {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/GaNuong1.png') ;
+}
+.itemPicGaRan {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/GaRan1.png') ;
+}
+.itemPicKhoaiTayChien {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/KhoaiTayChien1.png') ;
+}
+.itemPicMacaron {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/macaron1.png') ;
+}
+.itemPicMyY {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/myY1.png') ;
+}
+.itemPicNemCongChaPhuong {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/nemCongChaPhuong1.png') ;
+}
+.itemPicPanCake {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/pancake1.png') ;
+}
+.itemPicPizza {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/pizza1.png') ;
+}
+.itemPicCocaCola {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/Coca1.png') ;
+}
+.itemPicCappuccino {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/cappuccino1.png') ;
+}
+.itemPicCocktailRose {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/coctailRose1.png') ;
+}
+.itemPicNuocCam {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/nuocCam1.png') ;
+}
+.itemPicSinhTo {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/Sinhto1.png') ;
+}
+.itemPicSprite {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/sprite1.png') ;
+}
+.itemPicTraiCayDam {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/traiCayDam1.png') ;
+}
+.itemPicComboGiangSinh {
+  width: 120px;
+  height: 150px;
+  border: lightgray 1px solid;
+  border-radius: 8px;
+  background-image: url('./image/comboGiangSinh1.png') ;
+}
+
 .clear{
   clear:both;
 }
@@ -655,14 +911,4 @@ margin-top: 10%;
   border-radius: 5px;
   padding: 7px;
   margin-top: 15px;
-}
-.scroll-bg-cart{
-  width:100%;
-  margin: 5% auto;
-}
-.scroll-div-cart{
-  width: 100%;
-  height:340px;
-  overflow: hidden;
-  overflow-y: scroll;
 }
